# app/Http/Requests/Service/InventoryCreateFormRequest.php
@@ -17,6 +17,39 @@ use Illuminate\Foundation\Http\FormRequest;
 class InventoryCreateFormRequest extends FormRequest
 {
     /**
+     * @OA\Property(
+     *      title="Service Rate Id",
+     *      description="Service Rate Id",
+     *      example="1"
+     * )
+     *
+     * @var integer
+     */
+    public $service_rates_id;
+
+    /**
+     * @OA\Property(
+     *      title="Category Id",
+     *      description="Category Id",
+     *      example="1"
+     * )
+     *
+     * @var integer
+     */
+    public $category_id;
+
+    /**
+     * @OA\Property(
+     *      title="name",
+     *      description="name",
+     *      example="1"
+     * )
+     *
+     * @var integer
+     */
+    public $name;
+
+    /**
      * Determine if the user is authorized to make this request.
      *
      * @return bool
@@ -34,7 +67,9 @@ class InventoryCreateFormRequest extends FormRequest
     public function rules()
     {
         return [
-            //
+            'service_rates_id' => 'required|int|exists:service_rates,id',
+            'category_id' => 'required|int|exists:categories,id',
+            'name' => 'required|string',
         ];
     }
 }
